// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Frame should render a combobox variant 1`] = `
<Frame
  disabled={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en-US",
      "messages": Object {
        "Terra.form.select.add": "Add \\"{text}\\"",
        "Terra.form.select.ariaLabel": "Search",
        "Terra.form.select.defaultDisplay": "- Select -",
        "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
        "Terra.form.select.selected": "{text} Selected",
      },
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInvalid={false}
  variant="tag"
/>
`;

exports[`Frame should render a combobox variant with a placeholder 1`] = `
<Frame
  disabled={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en-US",
      "messages": Object {
        "Terra.form.select.add": "Add \\"{text}\\"",
        "Terra.form.select.ariaLabel": "Search",
        "Terra.form.select.defaultDisplay": "- Select -",
        "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
        "Terra.form.select.selected": "{text} Selected",
      },
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInvalid={false}
  placeholder="Placeholder"
  variant="tag"
/>
`;

exports[`Frame should render a custom dropdown 1`] = `
<Frame
  disabled={false}
  dropdown={[Function]}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en-US",
      "messages": Object {
        "Terra.form.select.add": "Add \\"{text}\\"",
        "Terra.form.select.ariaLabel": "Search",
        "Terra.form.select.defaultDisplay": "- Select -",
        "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
        "Terra.form.select.selected": "{text} Selected",
      },
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInvalid={false}
  variant="tag"
/>
`;

exports[`Frame should render a default variant 1`] = `
<Frame
  disabled={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en-US",
      "messages": Object {
        "Terra.form.select.add": "Add \\"{text}\\"",
        "Terra.form.select.ariaLabel": "Search",
        "Terra.form.select.defaultDisplay": "- Select -",
        "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
        "Terra.form.select.selected": "{text} Selected",
      },
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInvalid={false}
  variant="default"
/>
`;

exports[`Frame should render a default variant with a placeholder 1`] = `
<Frame
  disabled={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en-US",
      "messages": Object {
        "Terra.form.select.add": "Add \\"{text}\\"",
        "Terra.form.select.ariaLabel": "Search",
        "Terra.form.select.defaultDisplay": "- Select -",
        "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
        "Terra.form.select.selected": "{text} Selected",
      },
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInvalid={false}
  placeholder="Placeholder"
  variant="default"
/>
`;

exports[`Frame should render a disabled combobox variant 1`] = `
<Frame
  disabled={true}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en-US",
      "messages": Object {
        "Terra.form.select.add": "Add \\"{text}\\"",
        "Terra.form.select.ariaLabel": "Search",
        "Terra.form.select.defaultDisplay": "- Select -",
        "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
        "Terra.form.select.selected": "{text} Selected",
      },
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInvalid={false}
  variant="tag"
/>
`;

exports[`Frame should render a disabled default variant 1`] = `
<Frame
  disabled={true}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en-US",
      "messages": Object {
        "Terra.form.select.add": "Add \\"{text}\\"",
        "Terra.form.select.ariaLabel": "Search",
        "Terra.form.select.defaultDisplay": "- Select -",
        "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
        "Terra.form.select.selected": "{text} Selected",
      },
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInvalid={false}
  variant="default"
/>
`;

exports[`Frame should render a disabled multiple variant 1`] = `
<Frame
  disabled={true}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en-US",
      "messages": Object {
        "Terra.form.select.add": "Add \\"{text}\\"",
        "Terra.form.select.ariaLabel": "Search",
        "Terra.form.select.defaultDisplay": "- Select -",
        "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
        "Terra.form.select.selected": "{text} Selected",
      },
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInvalid={false}
  variant="multiple"
/>
`;

exports[`Frame should render a disabled search variant 1`] = `
<Frame
  disabled={true}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en-US",
      "messages": Object {
        "Terra.form.select.add": "Add \\"{text}\\"",
        "Terra.form.select.ariaLabel": "Search",
        "Terra.form.select.defaultDisplay": "- Select -",
        "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
        "Terra.form.select.selected": "{text} Selected",
      },
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInvalid={false}
  variant="search"
/>
`;

exports[`Frame should render a disabled tag variant 1`] = `
<Frame
  disabled={true}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en-US",
      "messages": Object {
        "Terra.form.select.add": "Add \\"{text}\\"",
        "Terra.form.select.ariaLabel": "Search",
        "Terra.form.select.defaultDisplay": "- Select -",
        "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
        "Terra.form.select.selected": "{text} Selected",
      },
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInvalid={false}
  variant="tag"
/>
`;

exports[`Frame should render a multiple variant 1`] = `
<Frame
  disabled={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en-US",
      "messages": Object {
        "Terra.form.select.add": "Add \\"{text}\\"",
        "Terra.form.select.ariaLabel": "Search",
        "Terra.form.select.defaultDisplay": "- Select -",
        "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
        "Terra.form.select.selected": "{text} Selected",
      },
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInvalid={false}
  variant="multiple"
/>
`;

exports[`Frame should render a multiple variant with a placeholder 1`] = `
<Frame
  disabled={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en-US",
      "messages": Object {
        "Terra.form.select.add": "Add \\"{text}\\"",
        "Terra.form.select.ariaLabel": "Search",
        "Terra.form.select.defaultDisplay": "- Select -",
        "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
        "Terra.form.select.selected": "{text} Selected",
      },
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInvalid={false}
  placeholder="Placeholder"
  variant="multiple"
/>
`;

exports[`Frame should render a search variant 1`] = `
<Frame
  disabled={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en-US",
      "messages": Object {
        "Terra.form.select.add": "Add \\"{text}\\"",
        "Terra.form.select.ariaLabel": "Search",
        "Terra.form.select.defaultDisplay": "- Select -",
        "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
        "Terra.form.select.selected": "{text} Selected",
      },
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInvalid={false}
  variant="search"
/>
`;

exports[`Frame should render a search variant with a placeholder 1`] = `
<Frame
  disabled={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en-US",
      "messages": Object {
        "Terra.form.select.add": "Add \\"{text}\\"",
        "Terra.form.select.ariaLabel": "Search",
        "Terra.form.select.defaultDisplay": "- Select -",
        "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
        "Terra.form.select.selected": "{text} Selected",
      },
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInvalid={false}
  placeholder="Placeholder"
  variant="search"
/>
`;

exports[`Frame should render a tag variant 1`] = `
<Frame
  disabled={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en-US",
      "messages": Object {
        "Terra.form.select.add": "Add \\"{text}\\"",
        "Terra.form.select.ariaLabel": "Search",
        "Terra.form.select.defaultDisplay": "- Select -",
        "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
        "Terra.form.select.selected": "{text} Selected",
      },
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInvalid={false}
  variant="tag"
/>
`;

exports[`Frame should render a tag variant with a placeholder 1`] = `
<Frame
  disabled={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en-US",
      "messages": Object {
        "Terra.form.select.add": "Add \\"{text}\\"",
        "Terra.form.select.ariaLabel": "Search",
        "Terra.form.select.defaultDisplay": "- Select -",
        "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
        "Terra.form.select.selected": "{text} Selected",
      },
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInvalid={false}
  placeholder="Placeholder"
  variant="tag"
/>
`;

exports[`Frame should render an invalid combobox variant 1`] = `
<Frame
  disabled={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en-US",
      "messages": Object {
        "Terra.form.select.add": "Add \\"{text}\\"",
        "Terra.form.select.ariaLabel": "Search",
        "Terra.form.select.defaultDisplay": "- Select -",
        "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
        "Terra.form.select.selected": "{text} Selected",
      },
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInvalid={true}
  variant="tag"
/>
`;

exports[`Frame should render an invalid default variant 1`] = `
<Frame
  disabled={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en-US",
      "messages": Object {
        "Terra.form.select.add": "Add \\"{text}\\"",
        "Terra.form.select.ariaLabel": "Search",
        "Terra.form.select.defaultDisplay": "- Select -",
        "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
        "Terra.form.select.selected": "{text} Selected",
      },
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInvalid={true}
  variant="default"
/>
`;

exports[`Frame should render an invalid multiple variant 1`] = `
<Frame
  disabled={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en-US",
      "messages": Object {
        "Terra.form.select.add": "Add \\"{text}\\"",
        "Terra.form.select.ariaLabel": "Search",
        "Terra.form.select.defaultDisplay": "- Select -",
        "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
        "Terra.form.select.selected": "{text} Selected",
      },
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInvalid={true}
  variant="multiple"
/>
`;

exports[`Frame should render an invalid search variant 1`] = `
<Frame
  disabled={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en-US",
      "messages": Object {
        "Terra.form.select.add": "Add \\"{text}\\"",
        "Terra.form.select.ariaLabel": "Search",
        "Terra.form.select.defaultDisplay": "- Select -",
        "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
        "Terra.form.select.selected": "{text} Selected",
      },
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInvalid={true}
  variant="search"
/>
`;

exports[`Frame should render an invalid tag variant 1`] = `
<Frame
  disabled={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en-US",
      "messages": Object {
        "Terra.form.select.add": "Add \\"{text}\\"",
        "Terra.form.select.ariaLabel": "Search",
        "Terra.form.select.defaultDisplay": "- Select -",
        "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
        "Terra.form.select.selected": "{text} Selected",
      },
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInvalid={true}
  variant="tag"
/>
`;

exports[`Frame should update the aria-live text when the search has no results 1`] = `
<InjectIntl(Frame)
  dropdown={[Function]}
  variant="tag"
>
  <Frame
    disabled={false}
    dropdown={[Function]}
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en-US",
        "messages": Object {
          "Terra.form.select.add": "Add \\"{text}\\"",
          "Terra.form.select.ariaLabel": "Search",
          "Terra.form.select.defaultDisplay": "- Select -",
          "Terra.form.select.noResults": "No matching results for \\"{text}\\"",
          "Terra.form.select.selected": "{text} Selected",
        },
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isInvalid={false}
    variant="tag"
  >
    <div
      aria-describedby="terra-select-screen-reader-description-2"
      aria-disabled={false}
      aria-expanded={false}
      aria-haspopup="true"
      aria-label={null}
      className="select tag"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="application"
      tabIndex="-1"
    >
      <div
        aria-disabled={false}
        aria-label={null}
        className="display"
        role={null}
      >
        <span
          className="visually-hidden-component"
          hidden={true}
          id="terra-select-screen-reader-description-2"
        >
          Use up and down arrow keys to navigate through options.
        </span>
        <ul
          className="content"
        >
          <li
            className="search-wrapper"
          >
            <input
              aria-describedby="terra-select-screen-reader-description-2"
              aria-disabled={false}
              aria-label="Search"
              className="search-input"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              type="text"
              value=""
            />
          </li>
        </ul>
      </div>
      <div
        className="toggle toggle-narrow"
      >
        <button
          aria-label="Click to navigate to options"
          className="toggle-btn"
          data-terra-form-select-toggle-button={true}
          onMouseDown={[Function]}
          type="button"
        >
          <span
            className="arrow-icon"
            data-terra-form-select-toggle-button-icon={true}
          />
        </button>
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        aria-relevant="additions text"
        className="visually-hidden-component"
      />
    </div>
  </Frame>
</InjectIntl(Frame)>
`;
